<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuStartLatin"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/startQuizLatin"/>

    <item
        android:id="@+id/menuStartGreek"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/startQuizGreek"/>

    <item
        android:id="@+id/menuStartMixed"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/startQuizMixed"/>

    <item
        android:id="@+id/menuExit"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/exit"/>
</menu>