<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="#000"
    >

    <TextView
        android:textColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_margin="20dp"
        android:paddingTop="15dp"
        android:textSize="25sp"
        android:layout_weight="10"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        >

        <TextView
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourName"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/editName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_marginRight="20dp"
            android:background="#3c3c3c"
            android:textColorHint="#AAA"
            android:hint="@string/enterName"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <Button
            android:id="@+id/startButtonLatin"
            android:text="@string/startQuizLatin"
            android:layout_height="match_parent"
            android:layout_weight="33"
            style="@style/button_style"/>

        <Button
            android:id="@+id/startButtonGreek"
            android:text="@string/startQuizGreek"
            android:layout_height="match_parent"
            android:layout_weight="33"
            style="@style/button_style"/>

        <Button
            android:id="@+id/startButtonMixed"
            android:text="@string/startQuizMixed"
            android:layout_height="match_parent"
            android:layout_weight="33"
            style="@style/button_style"/>

    </LinearLayout>

    <Button
        android:id="@+id/exitButton"
        android:text="@string/exit"
        android:layout_weight="20"
        style="@style/button_style"/>
</LinearLayout>